Adjust CSS to ensure shadow never overlaps text

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,7 +24,7 @@ html {
 }
 
 .container {
-  max-width: 680px;
+  width: 90%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -44,9 +44,9 @@ label {
 
 h1 {
   font-family: 'Work Sans', sans-serif;
-  font-size: 2em;
+  font-size: 1.5em;
   text-align: center;
-  margin: 1rem 0 5rem;
+  margin: 1rem 0 7rem;
 }
 
 /****************************************
@@ -56,7 +56,7 @@ Form
 .form--base {
   width: 90%;
   max-width: 500px;
-  margin-top: 5rem;
+  margin-top: 7rem;
   display: grid;
   grid-template-columns: auto 2fr;
   grid-template-rows: repeat(4, 1fr);
@@ -97,10 +97,11 @@ code {
   font-family: 'Roboto Mono', monospace;
   margin-top: 2rem;
   padding: 1rem;
-  font-size: 1.1em;
+  font-size: 0.9em;
   background-color: #f0f0f0;
   border-radius: 10px;
   position: relative;
+  max-width: 100%;
 }
 
 .clipboard-img {
@@ -121,23 +122,20 @@ Footer
 ****************************************/
 
 footer p {
-  margin: 2rem 0 1rem 0;
+  margin: 1rem 0 1rem 0;
   text-align: center;
-  font-size: 1em;
+  font-size: 0.8em;
 }
 
 /****************************************
 Media queries
 ****************************************/
 
-@media screen and (max-width: 410px) {
-  code {
-    font-size: 0.8em;
-  }
-}
-
 @media screen and (min-width: 680px) {
   h1 {
     font-size: 3em;
+  }
+  code {
+    font-size: 1em;
   }
 }
